packages/next-swc/crates/styled_jsx/tests/errors/wrong-child-type/input.js
export default () => (
  <div>
    <style jsx>
      10
    </style>
  </div>
)
